[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/Shaders/pixel_text_outline_material.tres" type="Material" id=1]
[ext_resource path="res://assets/Font/small_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Player/Abilities/Flash/Flash-Sheet.png" type="Texture" id=3]
[ext_resource path="res://assets/Ingredients/Clay.png" type="Texture" id=4]
[ext_resource path="res://assets/Ingredients/Rock.png" type="Texture" id=5]
[ext_resource path="res://assets/Font/large_dynamicFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/UI/3x3_Container.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/Menu/FormulaItem.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 176, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 208, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 272, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 304, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 336, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 352, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 368, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="FormulaItem" type="HBoxContainer"]
anchor_right = 0.415625
anchor_bottom = 0.1
custom_constants/separation = 2
alignment = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Name" type="Label" parent="."]
material = ExtResource( 1 )
margin_right = 31.0
margin_bottom = 18.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 6 )
text = "Flash"

[node name="Space" type="Control" parent="."]
margin_left = 33.0
margin_right = 79.0
margin_bottom = 18.0
size_flags_horizontal = 7

[node name="Ingredient1" type="TextureRect" parent="."]
margin_left = 81.0
margin_top = 4.0
margin_right = 89.0
margin_bottom = 13.0
size_flags_vertical = 4
texture = ExtResource( 4 )

[node name="Cost1" type="Label" parent="."]
material = ExtResource( 1 )
margin_left = 91.0
margin_top = 2.0
margin_right = 95.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="Ingredient2" type="TextureRect" parent="."]
margin_left = 97.0
margin_top = 4.0
margin_right = 105.0
margin_bottom = 13.0
size_flags_vertical = 4
texture = ExtResource( 5 )

[node name="Cost2" type="Label" parent="."]
material = ExtResource( 1 )
margin_left = 107.0
margin_top = 2.0
margin_right = 111.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
text = "2"

[node name="Space2" type="Control" parent="."]
margin_left = 113.0
margin_right = 113.0
margin_bottom = 18.0

[node name="SpriteContainer" type="NinePatchRect" parent="."]
margin_left = 115.0
margin_right = 133.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
size_flags_vertical = 9
texture = ExtResource( 7 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="SpriteContainer"]
position = Vector2( 9, 9 )
frames = SubResource( 25 )
frame = 9
playing = true
